--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,4 +1,6 @@
 micronaut:
+  server:
+    port: 8133
   application:
     name: aglGameService
   security:
@@ -12,7 +14,7 @@ micronaut:
         access:
           - isAuthenticated()
       - pattern: /api/games/save
-        http-method: PUT
+        http-method: POST
         access:
           - isAuthenticated()
       - pattern: /api/games/save/update
@@ -51,13 +53,13 @@ flyway:
 
 datasources:
   default:
-    url: ${PG_JDBC_URL:`jdbc:postgresql://10.100.64.94/usergameinfo`}
-    username: ${PG_USERNAME:amsumner}
-    password: ${PG_PASSWORD:password}
+    url: ${PG_JDBC_URL:`jdbc:postgresql://localhost:5432/usergameinfo`}
+    username: ${PG_USERNAME:postgres}
+    password: ${PG_PASSWORD:AstonVilla!96}
     driver-class-name: org.postgresql.Driver
     schema-generate: NONE
     dialect: POSTGRES
 
 rawg-adapter:
   api:
-    url: http://agl-rawg-adapter:8080
+    url: http://localhost:8132
